.antlr/XParser.cpp

    #include <map>
    #include "intermediate/symtab/Symtab.h"
    #include "intermediate/type/Typespec.h"
    using namespace intermediate::symtab;
    using namespace intermediate::type;


// Generated from c:\Users\Richie Lee\Desktop\College\1 San Jose State University\8 2021 Spring Semester\CMPE152\Final_project\X.g4 by ANTLR 4.8


#include "XVisitor.h"

#include "XParser.h"


using namespace antlrcpp;
using namespace antlr4;

XParser::XParser(TokenStream *input) : Parser(input) {
  _interpreter = new atn::ParserATNSimulator(this, _atn, _decisionToDFA, _sharedContextCache);
}

XParser::~XParser() {
  delete _interpreter;
}

std::string XParser::getGrammarFileName() const {
  return "X.g4";
}

const std::vector<std::string>& XParser::getRuleNames() const {
  return _ruleNames;
}

dfa::Vocabulary& XParser::getVocabulary() const {
  return _vocabulary;
}


//----------------- ProgramContext ------------------------------------------------------------------

XParser::ProgramContext::ProgramContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<XParser::FunctionDefinitionContext *> XParser::ProgramContext::functionDefinition() {
  return getRuleContexts<XParser::FunctionDefinitionContext>();
}

XParser::FunctionDefinitionContext* XParser::ProgramContext::functionDefinition(size_t i) {
  return getRuleContext<XParser::FunctionDefinitionContext>(i);
}

std::vector<XParser::FunctionDeclarationContext *> XParser::ProgramContext::functionDeclaration() {
  return getRuleContexts<XParser::FunctionDeclarationContext>();
}

XParser::FunctionDeclarationContext* XParser::ProgramContext::functionDeclaration(size_t i) {
  return getRuleContext<XParser::FunctionDeclarationContext>(i);
}

std::vector<XParser::AssignmentStatementContext *> XParser::ProgramContext::assignmentStatement() {
  return getRuleContexts<XParser::AssignmentStatementContext>();
}

XParser::AssignmentStatementContext* XParser::ProgramContext::assignmentStatement(size_t i) {
  return getRuleContext<XParser::AssignmentStatementContext>(i);
}

std::vector<XParser::VariableDeclarationContext *> XParser::ProgramContext::variableDeclaration() {
  return getRuleContexts<XParser::VariableDeclarationContext>();
}

XParser::VariableDeclarationContext* XParser::ProgramContext::variableDeclaration(size_t i) {
  return getRuleContext<XParser::VariableDeclarationContext>(i);
}


size_t XParser::ProgramContext::getRuleIndex() const {
  return XParser::RuleProgram;
}


antlrcpp::Any XParser::ProgramContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<XVisitor*>(visitor))
    return parserVisitor->visitProgram(this);
  else
    return visitor->visitChildren(this);
}

XParser::ProgramContext* XParser::program() {
  ProgramContext *_localctx = _tracker.createInstance<ProgramContext>(_ctx, getState());
  enterRule(_localctx, 0, XParser::RuleProgram);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(124); 
    _errHandler->sync(this);
    _la = _input->LA(1);
    do {
      setState(124);
      _errHandler->sync(this);
      switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 0, _ctx)) {
      case 1: {
        setState(114);
        functionDefinition();
        break;
      }

      case 2: {
        setState(115);
        functionDeclaration();
        setState(116);
        match(XParser::T__0);
        break;
      }

      case 3: {
        setState(118);
        assignmentStatement();
        setState(119);
        match(XParser::T__0);
        break;
      }

      case 4: {
        setState(121);
        variableDeclaration();
        setState(122);
        match(XParser::T__0);
        break;
      }

      }
      setState(126); 
      _errHandler->sync(this);
      _la = _input->LA(1);
    } while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << XParser::INT)
      | (1ULL << XParser::BOOL)
      | (1ULL << XParser::FLOAT)
      | (1ULL << XParser::VOID)
      | (1ULL << XParser::CHAR)
      | (1ULL << XParser::IDENTIFIER))) != 0));
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- C_statementContext ------------------------------------------------------------------

XParser::C_statementContext::C_statementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

XParser::FunctionDeclarationContext* XParser::C_statementContext::functionDeclaration() {
  return getRuleContext<XParser::FunctionDeclarationContext>(0);
}

XParser::StatementContext* XParser::C_statementContext::statement() {
  return getRuleContext<XParser::StatementContext>(0);
}

XParser::EmptyStatementContext* XParser::C_statementContext::emptyStatement() {
  return getRuleContext<XParser::EmptyStatementContext>(0);
}


size_t XParser::C_statementContext::getRuleIndex() const {
  return XParser::RuleC_statement;
}


antlrcpp::Any XParser::C_statementContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<XVisitor*>(visitor))
    return parserVisitor->visitC_statement(this);
  else
    return visitor->visitChildren(this);
}

XParser::C_statementContext* XParser::c_statement() {
  C_statementContext *_localctx = _tracker.createInstance<C_statementContext>(_ctx, getState());
  enterRule(_localctx, 2, XParser::RuleC_statement);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(137);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 2, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(128);
      functionDeclaration();
      setState(129);
      match(XParser::T__0);
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(131);
      statement();
      setState(132);
      match(XParser::T__0);
      break;
    }

    case 3: {
      enterOuterAlt(_localctx, 3);
      setState(134);
      emptyStatement();
      setState(135);
      match(XParser::T__0);
      break;
    }

    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- StatementContext ------------------------------------------------------------------

XParser::StatementContext::StatementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

XParser::AssignmentStatementContext* XParser::StatementContext::assignmentStatement() {
  return getRuleContext<XParser::AssignmentStatementContext>(0);
}

XParser::VariableDeclarationContext* XParser::StatementContext::variableDeclaration() {
  return getRuleContext<XParser::VariableDeclarationContext>(0);
}

XParser::ControlStatementContext* XParser::StatementContext::controlStatement() {
  return getRuleContext<XParser::ControlStatementContext>(0);
}

XParser::PrintStatementContext* XParser::StatementContext::printStatement() {
  return getRuleContext<XParser::PrintStatementContext>(0);
}

XParser::PrintlnStatementContext* XParser::StatementContext::printlnStatement() {
  return getRuleContext<XParser::PrintlnStatementContext>(0);
}

XParser::GetStatementContext* XParser::StatementContext::getStatement() {
  return getRuleContext<XParser::GetStatementContext>(0);
}

XParser::GetlnStatementContext* XParser::StatementContext::getlnStatement() {
  return getRuleContext<XParser::GetlnStatementContext>(0);
}

XParser::FunctionCallContext* XParser::StatementContext::functionCall() {
  return getRuleContext<XParser::FunctionCallContext>(0);
}

XParser::ReturnStatementContext* XParser::StatementContext::returnStatement() {
  return getRuleContext<XParser::ReturnStatementContext>(0);
}


size_t XParser::StatementContext::getRuleIndex() const {
  return XParser::RuleStatement;
}


antlrcpp::Any XParser::StatementContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<XVisitor*>(visitor))
    return parserVisitor->visitStatement(this);
  else
    return visitor->visitChildren(this);
}

XParser::StatementContext* XParser::statement() {
  StatementContext *_localctx = _tracker.createInstance<StatementContext>(_ctx, getState());
  enterRule(_localctx, 4, XParser::RuleStatement);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(148);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 3, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(139);
      assignmentStatement();
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(140);
      variableDeclaration();
      break;
    }

    case 3: {
      enterOuterAlt(_localctx, 3);
      setState(141);
      controlStatement();
      break;
    }

    case 4: {
      enterOuterAlt(_localctx, 4);
      setState(142);
      printStatement();
      break;
    }

    case 5: {
      enterOuterAlt(_localctx, 5);
      setState(143);
      printlnStatement();
      break;
    }

    case 6: {
      enterOuterAlt(_localctx, 6);
      setState(144);
      getStatement();
      break;
    }

    case 7: {
      enterOuterAlt(_localctx, 7);
      setState(145);
      getlnStatement();
      break;
    }

    case 8: {
      enterOuterAlt(_localctx, 8);
      setState(146);
      functionCall();
      break;
    }

    case 9: {
      enterOuterAlt(_localctx, 9);
      setState(147);
      returnStatement();
      break;
    }

    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- EmptyStatementContext ------------------------------------------------------------------

XParser::EmptyStatementContext::EmptyStatementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t XParser::EmptyStatementContext::getRuleIndex() const {
  return XParser::RuleEmptyStatement;
}


antlrcpp::Any XParser::EmptyStatementContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<XVisitor*>(visitor))
    return parserVisitor->visitEmptyStatement(this);
  else
    return visitor->visitChildren(this);
}

XParser::EmptyStatementContext* XParser::emptyStatement() {
  EmptyStatementContext *_localctx = _tracker.createInstance<EmptyStatementContext>(_ctx, getState());
  enterRule(_localctx, 6, XParser::RuleEmptyStatement);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);

   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- VariableDeclarationContext ------------------------------------------------------------------

XParser::VariableDeclarationContext::VariableDeclarationContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

XParser::TypeIdentifierContext* XParser::VariableDeclarationContext::typeIdentifier() {
  return getRuleContext<XParser::TypeIdentifierContext>(0);
}

std::vector<XParser::VariableIdentifierContext *> XParser::VariableDeclarationContext::variableIdentifier() {
  return getRuleContexts<XParser::VariableIdentifierContext>();
}

XParser::VariableIdentifierContext* XParser::VariableDeclarationContext::variableIdentifier(size_t i) {
  return getRuleContext<XParser::VariableIdentifierContext>(i);
}

std::vector<XParser::LengthContext *> XParser::VariableDeclarationContext::length() {
  return getRuleContexts<XParser::LengthContext>();
}

XParser::LengthContext* XParser::VariableDeclarationContext::length(size_t i) {
  return getRuleContext<XParser::LengthContext>(i);
}


size_t XParser::VariableDeclarationContext::getRuleIndex() const {
  return XParser::RuleVariableDeclaration;
}


antlrcpp::Any XParser::VariableDeclarationContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<XVisitor*>(visitor))
    return parserVisitor->visitVariableDeclaration(this);
  else
    return visitor->visitChildren(this);
}

XParser::VariableDeclarationContext* XParser::variableDeclaration() {
  VariableDeclarationContext *_localctx = _tracker.createInstance<VariableDeclarationContext>(_ctx, getState());
  enterRule(_localctx, 8, XParser::RuleVariableDeclaration);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(172);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 6, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(152);
      typeIdentifier();
      setState(153);
      variableIdentifier();
      setState(158);
      _errHandler->sync(this);
      _la = _input->LA(1);
      while (_la == XParser::T__1) {
        setState(154);
        match(XParser::T__1);
        setState(155);
        variableIdentifier();
        setState(160);
        _errHandler->sync(this);
        _la = _input->LA(1);
      }
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(161);
      typeIdentifier();
      setState(162);
      variableIdentifier();
      setState(169);
      _errHandler->sync(this);
      _la = _input->LA(1);
      while (_la == XParser::T__2) {
        setState(163);
        match(XParser::T__2);
        setState(164);
        length();
        setState(165);
        match(XParser::T__3);
        setState(171);
        _errHandler->sync(this);
        _la = _input->LA(1);
      }
      break;
    }

    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- LengthContext ------------------------------------------------------------------

XParser::LengthContext::LengthContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

XParser::ExpressionContext* XParser::LengthContext::expression() {
  return getRuleContext<XParser::ExpressionContext>(0);
}


size_t XParser::LengthContext::getRuleIndex() const {
  return XParser::RuleLength;
}


antlrcpp::Any XParser::LengthContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<XVisitor*>(visitor))
    return parserVisitor->visitLength(this);
  else
    return visitor->visitChildren(this);
}

XParser::LengthContext* XParser::length() {
  LengthContext *_localctx = _tracker.createInstance<LengthContext>(_ctx, getState());
  enterRule(_localctx, 10, XParser::RuleLength);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(174);
    expression(0);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- AssignmentStatementContext ------------------------------------------------------------------

XParser::AssignmentStatementContext::AssignmentStatementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t XParser::AssignmentStatementContext::getRuleIndex() const {
  return XParser::RuleAssignmentStatement;
}

void XParser::AssignmentStatementContext::copyFrom(AssignmentStatementContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- AssignVariableContext ------------------------------------------------------------------

XParser::LhsContext* XParser::AssignVariableContext::lhs() {
  return getRuleContext<XParser::LhsContext>(0);
}

XParser::RhsContext* XParser::AssignVariableContext::rhs() {
  return getRuleContext<XParser::RhsContext>(0);
}

XParser::AssignVariableContext::AssignVariableContext(AssignmentStatementContext *ctx) { copyFrom(ctx); }


antlrcpp::Any XParser::AssignVariableContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<XVisitor*>(visitor))
    return parserVisitor->visitAssignVariable(this);
  else
    return visitor->visitChildren(this);
}
//----------------- DecrementVariableContext ------------------------------------------------------------------

XParser::VariableContext* XParser::DecrementVariableContext::variable() {
  return getRuleContext<XParser::VariableContext>(0);
}

XParser::DecrementVariableContext::DecrementVariableContext(AssignmentStatementContext *ctx) { copyFrom(ctx); }


antlrcpp::Any XParser::DecrementVariableContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<XVisitor*>(visitor))
    return parserVisitor->visitDecrementVariable(this);
  else
    return visitor->visitChildren(this);
}
//----------------- IncrementVariableContext ------------------------------------------------------------------

XParser::VariableContext* XParser::IncrementVariableContext::variable() {
  return getRuleContext<XParser::VariableContext>(0);
}

XParser::IncrementVariableContext::IncrementVariableContext(AssignmentStatementContext *ctx) { copyFrom(ctx); }


antlrcpp::Any XParser::IncrementVariableContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<XVisitor*>(visitor))
    return parserVisitor->visitIncrementVariable(this);
  else
    return visitor->visitChildren(this);
}
XParser::AssignmentStatementContext* XParser::assignmentStatement() {
  AssignmentStatementContext *_localctx = _tracker.createInstance<AssignmentStatementContext>(_ctx, getState());
  enterRule(_localctx, 12, XParser::RuleAssignmentStatement);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(186);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 7, _ctx)) {
    case 1: {
      _localctx = dynamic_cast<AssignmentStatementContext *>(_tracker.createInstance<XParser::AssignVariableContext>(_localctx));
      enterOuterAlt(_localctx, 1);
      setState(176);
      lhs();
      setState(177);
      match(XParser::T__4);
      setState(178);
      rhs();
      break;
    }

    case 2: {
      _localctx = dynamic_cast<AssignmentStatementContext *>(_tracker.createInstance<XParser::IncrementVariableContext>(_localctx));
      enterOuterAlt(_localctx, 2);
      setState(180);
      variable();
      setState(181);
      match(XParser::T__5);
      break;
    }

    case 3: {
      _localctx = dynamic_cast<AssignmentStatementContext *>(_tracker.createInstance<XParser::DecrementVariableContext>(_localctx));
      enterOuterAlt(_localctx, 3);
      setState(183);
      variable();
      setState(184);
      match(XParser::T__6);
      break;
    }

    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- LhsContext ------------------------------------------------------------------

XParser::LhsContext::LhsContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

XParser::VariableContext* XParser::LhsContext::variable() {
  return getRuleContext<XParser::VariableContext>(0);
}

XParser::VariableDeclarationContext* XParser::LhsContext::variableDeclaration() {
  return getRuleContext<XParser::VariableDeclarationContext>(0);
}


size_t XParser::LhsContext::getRuleIndex() const {
  return XParser::RuleLhs;
}


antlrcpp::Any XParser::LhsContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<XVisitor*>(visitor))
    return parserVisitor->visitLhs(this);
  else
    return visitor->visitChildren(this);
}

XParser::LhsContext* XParser::lhs() {
  LhsContext *_localctx = _tracker.createInstance<LhsContext>(_ctx, getState());
  enterRule(_localctx, 14, XParser::RuleLhs);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(190);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case XParser::IDENTIFIER: {
        enterOuterAlt(_localctx, 1);
        setState(188);
        variable();
        break;
      }

      case XParser::INT:
      case XParser::BOOL:
      case XParser::FLOAT:
      case XParser::VOID:
      case XParser::CHAR: {
        enterOuterAlt(_localctx, 2);
        setState(189);
        variableDeclaration();
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- RhsContext ------------------------------------------------------------------

XParser::RhsContext::RhsContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

XParser::ExpressionContext* XParser::RhsContext::expression() {
  return getRuleContext<XParser::ExpressionContext>(0);
}


size_t XParser::RhsContext::getRuleIndex() const {
  return XParser::RuleRhs;
}


antlrcpp::Any XParser::RhsContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<XVisitor*>(visitor))
    return parserVisitor->visitRhs(this);
  else
    return visitor->visitChildren(this);
}

XParser::RhsContext* XParser::rhs() {
  RhsContext *_localctx = _tracker.createInstance<RhsContext>(_ctx, getState());
  enterRule(_localctx, 16, XParser::RuleRhs);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(192);
    expression(0);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ControlScopeContext ------------------------------------------------------------------

XParser::ControlScopeContext::ControlScopeContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<XParser::C_statementContext *> XParser::ControlScopeContext::c_statement() {
  return getRuleContexts<XParser::C_statementContext>();
}

XParser::C_statementContext* XParser::ControlScopeContext::c_statement(size_t i) {
  return getRuleContext<XParser::C_statementContext>(i);
}

std::vector<XParser::ControlStatementContext *> XParser::ControlScopeContext::controlStatement() {
  return getRuleContexts<XParser::ControlStatementContext>();
}

XParser::ControlStatementContext* XParser::ControlScopeContext::controlStatement(size_t i) {
  return getRuleContext<XParser::ControlStatementContext>(i);
}


size_t XParser::ControlScopeContext::getRuleIndex() const {
  return XParser::RuleControlScope;
}


antlrcpp::Any XParser::ControlScopeContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<XVisitor*>(visitor))
    return parserVisitor->visitControlScope(this);
  else
    return visitor->visitChildren(this);
}

XParser::ControlScopeContext* XParser::controlScope() {
  ControlScopeContext *_localctx = _tracker.createInstance<ControlScopeContext>(_ctx, getState());
  enterRule(_localctx, 18, XParser::RuleControlScope);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(194);
    match(XParser::T__7);
    setState(199);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << XParser::T__0)
      | (1ULL << XParser::T__7)
      | (1ULL << XParser::INT)
      | (1ULL << XParser::BOOL)
      | (1ULL << XParser::FLOAT)
      | (1ULL << XParser::VOID)
      | (1ULL << XParser::CHAR)
      | (1ULL << XParser::DO)
      | (1ULL << XParser::WHILE)
      | (1ULL << XParser::FOR)
      | (1ULL << XParser::IF)
      | (1ULL << XParser::SWITCH)
      | (1ULL << XParser::PRINT)
      | (1ULL << XParser::PRINTLN)
      | (1ULL << XParser::GET)
      | (1ULL << XParser::GETLN)
      | (1ULL << XParser::RETURN)
      | (1ULL << XParser::IDENTIFIER))) != 0)) {
      setState(197);
      _errHandler->sync(this);
      switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 9, _ctx)) {
      case 1: {
        setState(195);
        c_statement();
        break;
      }

      case 2: {
        setState(196);
        controlStatement();
        break;
      }

      }
      setState(201);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(202);
    match(XParser::T__8);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ControlStatementContext ------------------------------------------------------------------

XParser::ControlStatementContext::ControlStatementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

XParser::DoWhileLoopContext* XParser::ControlStatementContext::doWhileLoop() {
  return getRuleContext<XParser::DoWhileLoopContext>(0);
}

XParser::WhileLoopContext* XParser::ControlStatementContext::whileLoop() {
  return getRuleContext<XParser::WhileLoopContext>(0);
}

XParser::ForLoopContext* XParser::ControlStatementContext::forLoop() {
  return getRuleContext<XParser::ForLoopContext>(0);
}

XParser::IfStatementContext* XParser::ControlStatementContext::ifStatement() {
  return getRuleContext<XParser::IfStatementContext>(0);
}

XParser::SwitchStatementContext* XParser::ControlStatementContext::switchStatement() {
  return getRuleContext<XParser::SwitchStatementContext>(0);
}

